# bitwarden-backup

./: CLAUDE.md  README.md  pyproject.toml
Formula/: bitwarden-backup.rb
src/bitwarden_backup/: __main__.py  backup.py  cli.py  config.py  credentials.py  crypto.py  retention.py  schedule.py
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_crypto.py  test_retention.py
