[project]
name = "bitwarden-backup"
version = "0.1.0"
description = "Automated encrypted backups for Bitwarden vault"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "keyring>=24.0",
    "cryptography>=41.0",
]

[project.scripts]
bw-backup = "bitwarden_backup.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
